<resources>
    <string name="app_name">ExamApplication</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="already_an_user_login">Already an user? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign Up</string>
    <string name="login">Login</string>
    <string name="following">Following</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="username">Username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="first_answer">First Answer</string>
    <string name="QUESTION_1">Three things that they have learned .</string>
    <string name="QUESTION_2">Two questions that they still have.</string>
    <string name="QUESTION_3">One aspect they enjoyed.</string>
    <string name="second_answer">Second answer</string>
    <string name="third_answer">Third answer</string>
    <string name="save_answers">Save Answers</string>
    <string name="pomodoromethod">Pomodoro Technique</string>
    <string name="home">Home</string>
    <string name="blurting_method">Blurting Method</string>
    <string name="threetwoonemethod">321 Method</string>
    <string name="about_us_fragment">About Us Fragment</string>
    <string name="research">Research</string>
    <string name="buy_pro">Buy Pro</string>
    <string name="statistics">Statistics</string>
    <string name="aggiungi_materia">Add Course</string>
    <string name="inserisci_modifica_ore">Add Hour</string>
    <string name="modifica_oppure_elimina_ore">Edit/ Delete Hour</string>
</resources>