<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/QUESTION_1"
        android:textSize="20sp"/>


    <EditText
        android:id="@+id/answer1EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_answer"
        android:inputType="textMultiLine|textCapSentences"
        android:minLines="3"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/QUESTION_2"
        android:layout_marginTop="16dp"
        android:textSize="20sp"/>



    <EditText
        android:id="@+id/answer2EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_answer"
        android:inputType="textMultiLine|textCapSentences"
        android:minLines="3"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/QUESTION_3"
        android:layout_marginTop="16dp"
        android:textSize="20sp"/>


    <EditText
        android:id="@+id/answer3EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/third_answer"
        android:minLines="3"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        tools:ignore="TextFields,VisualLintTextFieldSize"
        android:autofillHints=""/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_answers"
        android:layout_marginTop="16dp" />

</LinearLayout>
